Update Java docker properties