@@ -22,5 +22,9 @@ RUN pip install -r /code/requirements.txt
 
 WORKDIR /code/
 
+# set switch that enables correct JVM memory allocation in containers
+ENV MAVEN_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx200m"
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx200m"
+
 
 CMD ["python", "-u", "/code/src/component.py"]
